Registration mobile adaptation, services close btn fix

--- a/src/components/Button/btn.module.scss
+++ b/src/components/Button/btn.module.scss
@@ -12,8 +12,9 @@
   cursor: pointer;
   border: none;
   outline: none;
-  @media (min-width: $break-md) {
-    border-radius: 0.55em;
+  @media (max-width: $break_md) {
+    border-radius: 1em;
+    padding: 0.6em 1em;
   }
 }
 
