--- a/src/components/ShBox/ShBox.module.scss
+++ b/src/components/ShBox/ShBox.module.scss
@@ -1,3 +1,5 @@
+@import "../../assets/scss/widths";
+
 .shBox {
   display: flex;
   flex-flow: column;
@@ -7,4 +9,7 @@
   padding: 0.5em;
   box-shadow: 0px -1px 20px #d2d2d2;
   border-radius: 0.7em;
+  @media (max-width: $break-md) {
+    box-shadow: none;
+  }
 }
