--- a/src/components/Switcher/Switcher.module.scss
+++ b/src/components/Switcher/Switcher.module.scss
@@ -8,6 +8,9 @@
   align-items: center;
   padding: 0 0.2em;
   cursor: pointer;
+  @media (max-width: $break-xs) {
+    transform: scale(1.2);
+  }
   .switcher {
     width: 1.47em;
     height: 1.47em;
