--- a/src/pages/Registration/ChooseYourFighter/ChooseYourFighter.module.scss
+++ b/src/pages/Registration/ChooseYourFighter/ChooseYourFighter.module.scss
@@ -5,6 +5,9 @@
   width: 85%;
   display: flex;
   justify-content: space-around;
+  @media (max-width: $break_xs) {
+    width: 95%;
+  }
 }
 
 .SubTitle {
