--- a/src/pages/Registration/RegistrationFlow/RegSchedule/RegSchedule.module.scss
+++ b/src/pages/Registration/RegistrationFlow/RegSchedule/RegSchedule.module.scss
@@ -1,4 +1,5 @@
 @import "../../../../assets/scss/colors";
+@import "../../../../assets/scss/widths";
 
 .scheduleWrap {
   width: 100%;
@@ -16,6 +17,12 @@
     font-weight: 400;
     color: $text-color;
     cursor: pointer;
+    @media (max-width: $break_xs) {
+      width: 70%;
+      font-size: 1.4em;
+      font-weight: 600;
+      padding: 0.7em 0 1.5em 0;
+    }
     & li {
       list-style: none;
     }
@@ -29,23 +36,42 @@
     display: flex;
     flex-flow: column;
     margin-bottom: 2em;
+    @media (max-width: $break_xs) {
+      width: 94%;
+      margin: 0 auto 1em auto;
+    }
     .day {
+      position: relative;
       list-style: none;
       display: flex;
       width: 100%;
       align-self: center;
       justify-content: space-between;
       padding: 0.9em 0;
+      @media (max-width: $break_xs) {
+        height: 8em;
+        border-top: 2px solid $main;
+        padding: 1.2em 0;
+      }
       .dayTitle {
         width: 20%;
         font-size: 1em;
         font-family: "Gilroy";
         font-weight: 400;
         color: $pale-text-color;
+        @media (max-width: $break_xs) {
+          font-size: 1.4em;
+          font-weight: 600;
+        }
       }
       .dayTime {
         display: flex;
         justify-content: space-around;
+        @media (max-width: $break_xs) {
+          position: absolute;
+          top: 50%;
+          font-size: 1.3em;
+        }
         .inputSep {
           height: 100%;
           margin: 0 1.5em;
